--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -12,7 +12,7 @@
     box-shadow: 0 0 0.5rem var(--neon-border-color);
     width: fit-content;
 
-    /* animation: flicker 1.5s infinite alternate; */
+    /* animation: flicker 2s infinite alternate; */
   }
 
 .logo::-moz-selection {
@@ -31,9 +31,9 @@
 
   /* @keyframes flicker {
 
-    0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+    0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% { */
 
-        /* text-shadow:
+         /* text-shadow:
             -0.2rem -0.2rem 1rem #fff,
             0.2rem 0.2rem 1rem #fff,
             0 0 2rem var(--neon-text-color),
@@ -42,17 +42,17 @@
             0 0 8rem var(--neon-text-color),
             0 0 10rem var(--neon-text-color); */
 
-        /* box-shadow:
-            0 0 .5rem #fff,
-            inset 0 0 .5rem #fff,
-            0 0 1rem var(--neon-border-color),
-            inset 0 0 1rem var(--neon-border-color),
-            0 0 1rem var(--neon-border-color),
-            inset 0 0 1rem var(--neon-border-color);
-    }
+         /* box-shadow:
+            0 0 .25rem #fff,
+            inset 0 0 0.5rem #fff,
+            0 0 .25rem var(--neon-border-color),
+            inset 0 0 0.5rem var(--neon-border-color),
+            0 0 .25rem var(--neon-border-color),
+            inset 0 0 0.5rem var(--neon-border-color);
+    } */
 
-    20%, 24%, 55% {
+    /* 20% {
         text-shadow: none;
         box-shadow: none;
-    }
-} */
+    } */
+/* } */
